[tool.poetry]
name = "gj"
version = "0.1.0"
description = ""
authors = ["Chris Pecunies <clp@clp.is>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg = "^3.2.2"
aiofiles = "^24.1.0"
asgiref = "^3.8.1"

[tool.poetry.scripts]
run = "dapne gj.asgi:application"

[tool.poetry.group.dev.dependencies]
Django = "^5.1.1"
daphne = "^4.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
